<resources>
    <string name="app_name">University Attendance</string>
    <string name="settings">Settings</string>
    <string name="clear_stored_class_names">Clear Stored Class Names</string>
    <string name="clear_stored_professor_usernames">Clear Stored Professor Usernames</string>
    <string name="done">Done</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="class_1">Class</string>
    <string name="end_date_yyyy_mm_dd">End Date (yyyy-mm-dd)</string>
    <string name="professor">Professor</string>
    <string name="start_date_yyyy_mm_dd">Start Date (yyyy-mm-dd)</string>
    <string name="student_id">Student ID</string>
    <string name="submit">Submit</string>
    <string name="check_attendance_2">Check Attendance</string>
    <string name="record_attendance">Record Attendance</string>
    <string name="select_an_option">Select an Option</string>
    <string name="settings_2">Settings</string>
    <string name="record_attendance_2">Record Attendance</string>
    <string name="room_code">Room Code</string>
    <string name="student_id_2">Student ID</string>
    <string name="submit_2">Submit</string>
</resources>
